Finish add games
Now able to add games with developer and genres.

--- a/.env
+++ b/.env
@@ -2,12 +2,15 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:24uSGohCYYWAEnjE7qlbNGvEqvKAaOVeswYlcThfUGU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/github/GameReleases/public
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=sqlite
-
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_DATABASE=gamereviews
+DB_USERNAME=root
+#DB_PASSWORD=gamereviews
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
